Xfree Editor 이미지 파일 업로드 기능 개발

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,6 @@
 ### Platform Attributes ###
 platform.service=PRD
 ##oracle, mariadb, mssql
-#platform.db=mariadb
-#platform.db=mssql
 platform.db=oracle
 
 ### Thymeleaf ###
@@ -33,7 +31,6 @@ spring.redis.host=div-ordering-prod.redis.cache.windows.net
 spring.redis.port=6380
 spring.redis.password=WVkQh4LCjznjJzQyibMo06JjMlGUd4nUk3+IBkwdBPU=
 spring.redis.ssl=true
-spring.redis.abort-connect=false
 spring.redis.lettuce.pool.max-active=50
 spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
@@ -47,8 +44,8 @@ spring.session.store-type=REDIS
 ## Spring Security
 #Http Only : true로 설정하면 클라이언트 사이드의 자바스크립트는 해당 쿠키에 접근할 수 없다. 다시 말해 해당 쿠키를 생성하고 전송해 준 서버만 접근할 수 있다.
 #Secure Flag : true로 설정하면 보안이 확보된 채널(HTTPS)을 통해서만 쿠키를 전송한다. 중간에서 엿볼 수 없다
-server.session.cookie.http-only=true
-server.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
 
 ### Cache ###
 ## Redis Cache
@@ -76,7 +73,8 @@ server.max-http-header-size=2097152
 
 ### File Upload ###
 ##Xfree
-xfree.file.path=/pv-storage/xfree
+xfree.upload.path=/pv-storage/xfree
+xfree.image.viewer=/portal/iv/xfree/image/viewer
 
 ## Multipart
 spring.servlet.multipart.maxFileSize=2048MB
