--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,6 @@ spring.redis.host=div-ordering-dev.redis.cache.windows.net
 spring.redis.port=6380
 spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
 spring.redis.ssl=true
-spring.redis.abort-connect=false
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
@@ -45,8 +44,8 @@ spring.session.store-type=REDIS
 ## Spring Security
 #Http Only : true로 설정하면 클라이언트 사이드의 자바스크립트는 해당 쿠키에 접근할 수 없다. 다시 말해 해당 쿠키를 생성하고 전송해 준 서버만 접근할 수 있다.
 #Secure Flag : true로 설정하면 보안이 확보된 채널(HTTPS)을 통해서만 쿠키를 전송한다. 중간에서 엿볼 수 없다
-server.session.cookie.http-only=true
-#server.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+#server.servlet.session.cookie.secure=true
 
 ### Cache ###
 ## Redis Cache
@@ -60,9 +59,10 @@ sso.ad.domainSecret=72564eff-91c6-4b6b-b029-e9950e473b64
 sso.ad.platform-gateway-host=https://gateway-dev.d-platform.doosan.com
 
 ### Browser Cache Busting ###
-spring.resources.chain.enabled=true
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
+#include 된 css, javascript 의 이름을 자동으로 변경시켜 줌. css, javascript 변경 시 재시작이 필요하여 local 에서는 제외함 
+#spring.resources.chain.enabled=true
+#spring.resources.chain.strategy.content.enabled=true
+#spring.resources.chain.strategy.content.paths=/**
 
 ### Mailing ####
 spring.mail.host=10.224.49.221
@@ -74,8 +74,8 @@ server.max-http-header-size=2097152
 
 ### File Upload ###
 ##Xfree
-xfree.file.path=C:\\Downloads\\xfree
-#xfree.file.webPath=/portal/editor/img/
+xfree.upload.path=C:\\Downloads\\xfree
+xfree.image.viewer=/portal/iv/xfree/image/viewer
 
 ## Multipart
 spring.servlet.multipart.maxFileSize=2048MB
