JDBC, RFC 로그 console 에서 확인 가능하도록 적용. DIVK 계정도 계정관리 기능으로 생성되도록 개선.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,5 @@
 ### Platform Attributes ###
 platform.service=DEV
-##oracle, mariadb, mssql
 platform.db=oracle
 
 ### Thymeleaf ###
@@ -8,7 +7,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 ### Interface Logging ###
-if.logging.sap=true
+if.logging.sap.request=true
 if.logging.sap.result=true
 if.logging.db=true
 
@@ -17,8 +16,8 @@ sap.jco.enable=true
 sap.jco.default_resource=DEFAULT
 
 ## Oracle
-spring.datasource.driverClassName=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.249.26.186:1527:DIVDPDEV
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@10.249.26.186:1527:DIVDPDEV
 spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
 spring.datasource.password=e+G1DTigu6/5B2kXbwtaIQ==
 
