--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,5 @@
 ### Platform Attributes ###
 platform.service=PRD
-##oracle, mariadb, mssql
 platform.db=oracle
 
 ### Thymeleaf ###
@@ -8,7 +7,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 ### Interface Logging ###
-if.logging.sap=true
+if.logging.sap.request=true
 if.logging.sap.result=true
 if.logging.db=true
 
@@ -21,6 +20,12 @@ spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@10.249.13.126:1521:DIVDPPRD
 spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
 spring.datasource.password=aF1GaxnW/i41/T/xbtdTSA==
+
+#품질서버에서 테스트 후 적용 예정
+#spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@10.249.13.126:1521:DIVDPPRD
+#spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
+#spring.datasource.password=aF1GaxnW/i41/T/xbtdTSA==
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
