--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,13 @@
 			<version>31.1-jre</version>
 		</dependency>
 		
+		<!-- Log4Jdbc Log4j2 JDBC 4 1 -->
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
+		
 		<!-- SAP Jco -->
 		<dependency>
 		    <groupId>sapjco3</groupId>
