--- a/pom.xml
+++ b/pom.xml
@@ -215,12 +215,13 @@
 			<version>1.7</version>
 		</dependency>
 		
-		<!-- Google core library guava -->
+		<!-- Google core library guava
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>31.1-jre</version>
 		</dependency>
+		-->
 		
 		<!-- Log4Jdbc Log4j2 JDBC 4 1 -->
 		<dependency>
