--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,13 @@
 		</dependency>
 		-->
 		
+		<!-- PDF Generator -->
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.22</version>
+		</dependency>
+		
 		<!-- Log4Jdbc Log4j2 JDBC 4 1 -->
 		<dependency>
 			<groupId>org.bgee.log4jdbc-log4j2</groupId>
