--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,5 +85,6 @@ spring.servlet.multipart.location=C:\\Downloads
 file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css^asp^aspx^jsp^php^inc^cgi^html^htm^js^jar^jhtml^php3^phtml
 ## Upload Path
 file.upload.rootPath=C:\\Downloads
+file.upload.temp=\\temp
 file.upload.order=\\order
 file.upload.claim=\\claim
