--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.encoding=UTF-8
 ### Interface Logging ###
 if.logging.sap.request=true
 if.logging.sap.result=true
-if.logging.db=true
+if.logging.db=false
 
 ### SAP Landscape ###
 sap.jco.enable=true
