RFC response 로그 쌓이지 않게 설정 변경

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.encoding=UTF-8
 
 ### Interface Logging ###
 if.logging.sap.request=true
-if.logging.sap.result=true
+if.logging.sap.result=false
 if.logging.db=false
 
 ### SAP Landscape ###
@@ -20,12 +20,6 @@ spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@10.249.13.126:1521:DIVDPPRD
 spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
 spring.datasource.password=aF1GaxnW/i41/T/xbtdTSA==
-
-#품질서버에서 테스트 후 적용 예정
-#spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@10.249.13.126:1521:DIVDPPRD
-#spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
-#spring.datasource.password=aF1GaxnW/i41/T/xbtdTSA==
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
