--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.encoding=UTF-8
 
 ### Interface Logging ###
 if.logging.sap.request=true
-if.logging.sap.result=false
+if.logging.sap.result=true
 if.logging.db=false
 
 ### SAP Landscape ###
