셋업 변경 및 불필요 소스 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,19 +17,27 @@ sap.jco.default_resource=DEFAULT
 
 ## Oracle
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@10.249.26.186:1527:DIVDPDEV
-spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
-spring.datasource.password=e+G1DTigu6/5B2kXbwtaIQ==
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=jE3dKcBwqQBZy0llxXI6vQ==
+spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=50
 
 ### REDIS ###
-spring.redis.host=div-ordering-dev.redis.cache.windows.net
-spring.redis.port=6380
-spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
-spring.redis.ssl=true
+#spring.redis.host=div-ordering-dev.redis.cache.windows.net
+#spring.redis.port=6380
+#spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
+#spring.redis.ssl=true
+#spring.redis.lettuce.pool.max-active=10
+#spring.redis.lettuce.pool.max-idle=10
+#spring.redis.lettuce.pool.min-idle=2
+#spring.redis.lettuce.pool.max-wait=-1ms
+#spring.redis.lettuce.shutdown-timeout=200ms
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=1111
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
